# saceit-vp

./: README.md  program.md
labs/01_setup/: README.md
labs/02_widgets/: README.md
labs/03_signal_slot/: README.md
labs/04_events/: README.md
labs/05_custom_widget/: README.md
labs/06_model_view/: README.md
lectutes/01_qt_introduction/: README.md
lectutes/02_signal_slot/: README.md  lecture_2.md
lectutes/03_widgets/: README.md
lectutes/04_layout/: README.md
lectutes/05_events/: README.md
lectutes/05_events/src/: CMakeLists.txt  MyEventFilter.h  MyTimerWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myeventfilter.cpp  myeventfilter.h  mytimerwidget.cpp  mytimerwidget.h
lectutes/06_resources/: README.md
lectutes/06_resources/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lectutes/06_resources/src/translations/: app_en.ts  app_uk.ts
lectutes/07_custom_widget/: README.md
lectutes/07_custom_widget/src/: CMakeLists.txt  mainwindow.ui  mycustomwidget.cpp  mycustomwidget.h
lectutes/08_model_view/: README.md
lectutes/08_model_view/src/list/: mainwindow.cpp  mainwindow.h
lectutes/08_model_view/src/table/: mainwindow.cpp  mainwindow.h
lectutes/08_model_view/src/tree/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
lectutes/09_graphics_framework/: README.md
lectutes/09_graphics_framework/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
lectutes/10_declarative_ui/: README.md
lectutes/10_declarative_ui/src/: CMakeLists.txt  Main.qml  main.cpp
